Spacing issue on mobile fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,17 +30,18 @@ $navbar-default-bg: #EA7A33;
 .jumbotron h1 {
   color: #fff;
   text-align: center;
-  margin-bottom: 30px;
-  letter-spacing: -1px;
   font-weight: bold;
 }
 
 .jumbotron h2 {
   color: black;
   text-align: center;
+  font-weight: bold;
+}
+
+.jumbotron h1, h2 {
   margin-bottom: 30px;
   letter-spacing: -1px;
-  font-weight: bold;
 }
 
 .btn-xlarge {
